@@ -100,10 +100,10 @@ class FilterBase(QtWidgets.QWidget):
         # tool buttons (2nd column)
         widact = QtWidgets.QWidget(self)
         horz_layout = QtWidgets.QHBoxLayout(widact)
-        horz_layout.setContentsMargins(0, 0, 5, 0)
         horz_layout.setAlignment(QtCore.Qt.AlignmentFlag.AlignRight)
+        horz_layout.setSpacing(2)
+        horz_layout.setContentsMargins(0, 0, 2, 0)
 
-        col_width = 0
         for action in self.get_entry_actions(row, entry):
             if action["name"] in self.active_actions:
                 tbact = QtWidgets.QToolButton(widact)
@@ -113,10 +113,8 @@ class FilterBase(QtWidgets.QWidget):
                 tbact.clicked.connect(action["function"])
                 horz_layout.addWidget(tbact)
                 row_height = tbact.geometry().height()
-                col_width += row_height
-                tbact.setFixedWidth(row_height)
+                tbact.setFixedSize(row_height - 2, row_height - 2)
 
-        self.tableWidget.setColumnWidth(1, col_width)
         self.tableWidget.setCellWidget(row, 1, widact)
 
         return widact
