@@ -509,6 +509,9 @@ class UploadTableWidget(QtWidgets.QTableWidget):
 
         # enable updates again
         self.setUpdatesEnabled(True)
+        header = self.horizontalHeader()
+        header.setSectionResizeMode(
+            5, QtWidgets.QHeaderView.ResizeMode.ResizeToContents)
 
     def set_label_item(self, row, col, label):
         """Get/Create a Qlabel at the specified position
