@@ -5,6 +5,7 @@
  - fix: cache download resource file size
  - fix: action button behavior in downloads panel (#94)
  - fix: action button behavior in uploads panel
+ - enh: unify action button size, alignment, and spacing across all tabs
  - enh: allow sharing individual datasets instead of collections (#32)
  - enh: add preview option for dataset description in upload dialog (#52)
  - enh: introduce write lock for eternal job updates
